Fiori App Update

--- a/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
@@ -6,10 +6,10 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <style>
-    span {
+    /*span {
         color: red;
         font-size: 14px;
-    }
+    }*/
 </style>
 <a class="card-title" id="activityCreation">Activity Creation</a>
 <a class="card-title" style="display:none" id="activityUpdation">Activity Updation</a>
@@ -30,7 +30,7 @@
                     @*<span id="lblTask" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblTask">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span  class="Class_span" id="lblTask">&nbsp;</span>
                 </div>
             </div>
 
@@ -51,7 +51,7 @@
                     @*<span id="lblApplicationArea" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblApplicationArea">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span  class="Class_span" id="lblApplicationArea">&nbsp;</span>
                 </div>
             </div>
         </div>
@@ -73,7 +73,7 @@
                     @*<span id="lblPhase" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblPhase">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span  class="Class_span" id="lblPhase">&nbsp;</span>
                 </div>
             </div>
 
@@ -92,7 +92,7 @@
                     @*<span id="lblRole" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span id="lblRole">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span  class="Class_span" id="lblRole">&nbsp;</span>
                 </div>
             </div>
         </div>
