--- a/ProAcc/Views/ProjectMonitor/AssusmentMonitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/AssusmentMonitor.cshtml
@@ -600,7 +600,7 @@
                     , formatter: "checkbox",
                 },
                 {
-                    label: 'Named Owner of Task', name: 'UserID', index: 'UserID', width: 75, align: 'center', editable: false,
+                    label: 'Owner of Task', name: 'UserID', index: 'UserID', width: 75, align: 'center', editable: false,
                     cellEdit: true, edittype: 'select', formatter: 'select',
                     editoptions: {
                         value: GetUserDropDown()
