--- a/ProAcc/Views/Assessment/ReadinessReport.cshtml
+++ b/ProAcc/Views/Assessment/ReadinessReport.cshtml
@@ -3,10 +3,11 @@
 	ViewBag.Title = "ReadinessReport";
 	Layout = "~/Views/shared/_Layout.cshtml";
 }
-<script src="~/Asset/Scripts/Chart.js"></script>
+
+@Scripts.Render("~/bundles/Scripts/ChartJS")
+@*<script src="~/Asset/Scripts/Chart.js"></script>
 <script src="~/Asset/Scripts/Chart.RadialGauge.umd.js"></script>
-@*<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"></script>*@
-<script src="~/Asset/Scripts/chartjs-plugin-labels.min.js"></script>
+<script src="~/Asset/Scripts/chartjs-plugin-labels.min.js"></script>*@
 
 <a class="card-title">Readiness Report</a>
 @*<h5><b>Readiness Report</b> </h5>*@
@@ -27,7 +28,7 @@
 				}
 				<div class="col-md-4">
 					<label class="">Project Name</label>
-					@if (User.IsInRole("Customer")|| User.IsInRole("Project Manager"))
+					@if (User.IsInRole("Customer") || User.IsInRole("Project Manager"))
 					{
 						@Html.DropDownList("Project", (IEnumerable<SelectListItem>)ViewBag.Project, "-Select-", new { id = "IDProject", @class = "form-control" })
 					}
@@ -53,7 +54,7 @@
 
 
 			@*<a>Project Name :<b> @ProAcc.BL.Model.Common.Project_Name</b></a>
-			<a class="float-lg-right">Instance Name :<b> @ProAcc.BL.Model.Common.Instance_Name</b></a>*@
+				<a class="float-lg-right">Instance Name :<b> @ProAcc.BL.Model.Common.Instance_Name</b></a>*@
 		</div>
 
 		<a class="toast-title">Readiness Report</a>
@@ -81,10 +82,10 @@
 					<canvas id="Chart_Activities_Donut"></canvas>
 				</div>
 				@*<div class="col-lg-4">
-					<label></label>
+						<label></label>
 
-					<canvas id="Chart_Activities_Bar2"></canvas>
-				</div>*@
+						<canvas id="Chart_Activities_Bar2"></canvas>
+					</div>*@
 			</div>
 		</div>
 
@@ -138,7 +139,7 @@
 		}
 	</div>
 
-	
+
 </div>
 <script type="text/javascript">
 
@@ -155,7 +156,12 @@
 		Ajax_CustomCode_Bar();
 
 
-	});
+    });
+
+
+
+
+
 	function Ajax_SimplificationDonut() {
 		$.ajax({
 				type: "POST",
@@ -174,8 +180,7 @@
 				}
 			});
 	}
-	function renderChart(data, labels) {
-
+    function renderChart(data, labels) {
 		//Chart.defaults.global.defaultFontFamily = "Verdana";
 		var ctx = document.getElementById("Chart_Relevant").getContext("2d");
 
@@ -245,6 +250,9 @@
 
 		window.myRadialGauge = new Chart(ctx, config);
 	}
+
+
+
 
 	function Ajax_Activities_Bar1() {
 		$.ajax({
@@ -1028,7 +1036,7 @@
 						gridLines: {
 							display: false,
                             drawBorder: false,
-							
+
 						}
 					}]
 				}
@@ -1119,7 +1127,7 @@
                     $("#IDProject").prop("disabled", false);
                     $("#IDInstance").prop("disabled", true);
                     $('#SubmitInstance').prop("disabled", true);
-                    
+
                 },
                 error: function (a) {
                     debugger;
@@ -1199,8 +1207,8 @@
                             action: function (event, ui) {
                                 $(this).remove();
 								location.reload();
-								
-                                
+
+
                             }
                         }
                     }
@@ -1227,5 +1235,5 @@
             }
         });
     }
-                                
+
 </script>
