--- a/ProAcc/Views/Customers/GetCustomerById.cshtml
+++ b/ProAcc/Views/Customers/GetCustomerById.cshtml
@@ -34,7 +34,15 @@
                         <option value="0">Select Industry</option>
                         @foreach (var item in ViewBag.IndustrySector)
                         {
-                            <option value="@item.IndustrySector_ID" selected>@item.Industry_Sector</option>
+                            if (item.IndustrySector_ID == Model.IndustrySector_ID)
+                            {
+                                <option value="@item.IndustrySector_ID" selected>@item.Industry_Sector</option>
+                            }
+                            else
+                            {
+                                <option value="@item.IndustrySector_ID">@item.Industry_Sector</option>
+                            }
+
                         }
                     </select>
                 </div>
@@ -225,7 +233,7 @@
     });
 
     function ValidateName(data) {
-             var letters = /^[A-Za-z, ]+$/;
+             var letters = /^[A-Za-z._, ]+$/;
             if (!letters.test(data)) {
                 return false;
             }
