--- a/ProAcc/Views/User/Edit.cshtml
+++ b/ProAcc/Views/User/Edit.cshtml
@@ -5,39 +5,39 @@
     Layout = "~/Views/shared/_Layout.cshtml";
 }
 
-    <style>
-        .required::after {
-            content: "*";
-            font-weight: bold;
-            color: red;
-        }
+<style>
+    .required::after {
+        content: "*";
+        font-weight: bold;
+        color: red;
+    }
 
-        span {
-            color: red;
-            font-size: 14px;
-        }
-    </style>
+    span {
+        color: red;
+        font-size: 14px;
+    }
+</style>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <a class="card-title">User Updation</a>
-    <hr/>
+    <hr />
     <div style="padding:1em;" class="col-lg-12">
         <div class="row">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="col-6 ">
 
-                @Html.HiddenFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control",@id="UserId" } })
-                @Html.HiddenFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.HiddenFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control", @id = "UserId" } })
+                @*@Html.HiddenFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })*@
                 @Html.HiddenFor(model => model.Cre_on, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.HiddenFor(model => model.Cre_By, new { htmlAttributes = new { @class = "form-control" } })
-                
+
                 <div class="position-relative form-group">
                     @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-5 " })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @id="userMasterName",@class = "form-control" } })
+                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @id = "userMasterName", @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                     </div>
                     <div>
@@ -46,9 +46,9 @@
                 </div>
 
                 <div class="position-relative form-group">
-                    @Html.LabelFor(model => model.EMail,"Email", htmlAttributes: new { @class = "control-label col-md-5" })
+                    @Html.LabelFor(model => model.EMail, "Email", htmlAttributes: new { @class = "control-label col-md-5" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.EMail, new { htmlAttributes = new { @class = "form-control", @id="txtUserEmail" } })
+                        @Html.EditorFor(model => model.EMail, new { htmlAttributes = new { @class = "form-control", @id = "txtUserEmail" } })
                         @Html.ValidationMessageFor(model => model.EMail, "", new { @class = "text-danger" })
                     </div>
                     <div>
@@ -59,20 +59,52 @@
                 <div class="position-relative form-group">
                     @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-5" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control", @id = "txtMobile",@maxlength = "10" } })
+                        @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control", @id = "txtMobile", @maxlength = "10" } })
                         @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
                     </div>
                     <div>
                         &nbsp;&nbsp;&nbsp;<span id="lblMobile">&nbsp;</span>
                     </div>
                 </div>
+
+                <div class="position-relative form-group">
+                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-5" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @id = "txtPassword", @maxlength = "10", @type = "password", @onchange = "Onchangepassword()" } })
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                    </div>
+                    <div>
+                        &nbsp;&nbsp;&nbsp;<span id="lblPassword">&nbsp;</span>
+                    </div>
+                </div>
+                <div class="position-relative form-group">
+                    @Html.Label("Confirm Password", htmlAttributes: new { @class = "control-label col-md-5" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.Password, new
+                        {
+                            htmlAttributes = new
+                   {
+                       @class = "form-control",
+                       @id = "txtcnfPassword",
+                       @maxlength = "10",
+                                @onchange = "Onchangeconfirmpassword()",
+                                @type = "password"
+                            }
+                        })
+                        @Html.ValidationMessage("Confirm Password", "", new { @class = "text-danger" })
+                    </div>
+                    <div>
+                        &nbsp;&nbsp;&nbsp;<span id="lblCnfPassword">&nbsp;</span>
+                    </div>
+                </div>
             </div>
+
 
             <div class="col-6 ">
                 <div class="position-relative form-group">
-                    @Html.LabelFor(model => model.LoginId,"Login Id", htmlAttributes: new { @class = "control-label col-md-5" })
+                    @Html.LabelFor(model => model.LoginId, "Login Id", htmlAttributes: new { @class = "control-label col-md-5" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.LoginId, new { htmlAttributes = new { @class = "form-control",@id = "LoginUserID" } })
+                        @Html.EditorFor(model => model.LoginId, new { htmlAttributes = new { @class = "form-control", @id = "LoginUserID" } })
                         @Html.ValidationMessageFor(model => model.LoginId, "", new { @class = "text-danger" })
                     </div>
                     <div>
@@ -86,7 +118,7 @@
                         @Html.DropDownList("UserTypeID", null, htmlAttributes: new { @class = "form-control", @disabled = "disabled" })
                         @Html.ValidationMessageFor(model => model.UserTypeID, "", new { @class = "text-danger" })
                         @Html.HiddenFor(model => model.UserTypeID, new { htmlAttributes = new { @class = "form-control" } })
-                    </div>                     
+                    </div>
                 </div>
 
                 <div class="position-relative form-group" id="divRole">
@@ -109,13 +141,13 @@
 
             </div>
         </div>
-            @*<div class="form-group">
+        @*<div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Save" id="saveUser" class="btn btn-primary" />
                 </div>
             </div>*@
-        </div>
-        <div class="row">
+    </div>
+    <div class="row">
         <div class="col-lg-12">
 
             <div class="col-md-offset-2 col-md-12">
@@ -127,11 +159,11 @@
             </div>
         </div>
     </div>
-        }
+}
 
-        @*<div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>*@
+@*<div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>*@
 
 <script>
     $(document).ready(function () {
@@ -150,10 +182,10 @@
             $("#divCust").show();
         }
 
-        $('#LoginUserID').attr("readonly", true); 
-        $('#UserTypeID').attr("readonly", true); 
-        $('#RoleID').attr("readonly", true); 
-        $('#Customer_Id').attr("readonly", true); 
+        $('#LoginUserID').attr("readonly", true);
+        $('#UserTypeID').attr("readonly", true);
+        $('#RoleID').attr("readonly", true);
+        $('#Customer_Id').attr("readonly", true);
 
         $("#btnAdduser").click(function () {
             window.location.href = "@Url.Action("CreateUsers", "User")";
@@ -187,7 +219,7 @@
          });
 
         $('#userMasterName').on('focusout', function () {
-            
+
             var userMasterName = $("#userMasterName").val().trim();
             var id = $("#UserId").val().trim();
             if (userMasterName == "") {
@@ -222,7 +254,7 @@
     });
 
     $('#LoginUserID').on('focusout', function () {
-        
+
         var LoginName = $("#LoginUserID").val().trim();
          var id = $("#UserId").val().trim();
         if (LoginName == "") {
@@ -271,7 +303,7 @@
      });
 
     $("#txtMobile").blur(function () {
-            
+
             phone = $(this).val();
             phone = phone.replace(/[^0-9]/g,'');
             if (phone.length != 10) {
@@ -286,7 +318,7 @@
        });
 
     $("#txtUserEmail").on("blur", function (event) {
-           
+
            var str = $(this).val();
            var filter = /^([\w-\.]+)@@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
 
@@ -298,29 +330,113 @@
             $("#lblUserEmail").html("").hide();
             ValidateUser();
         }
-        
-    });   
+
+    });
+
+    function Onchangepassword() {
+        var str = document.getElementById("txtcnfPassword").value;
+        var str2 = document.getElementById("txtPassword").value;
+        var str3 = document.getElementById("lblCnfPassword");
+        if (str2 != str) {
+            $("#lblCnfPassword").html("Password Does not match kindly check").show().fadeOut(2000);
+            //result = "error";
+            $.alert({
+                title: 'Info !',
+                content: 'Do you want to update password?',
+                icon: 'fa fa-trash-o',
+                animation: 'scale',
+                closeAnimation: 'scale',
+                opacity: 0.5,
+                draggable: false,
+                buttons: {
+                    'confirm': {
+                        text: 'Yes',
+                        btnClass: 'btn-danger',
+                    }
+                },
+            });
+        }
+    }
+    function Onchangeconfirmpassword() {
+        var str = document.getElementById("txtcnfPassword").value;
+        var str2 = document.getElementById("txtPassword").value;
+        var str3 = document.getElementById("lblCnfPassword");
+        if (str != str2) {
+            $("#lblCnfPassword").html("Password Does not match kindly check").show().fadeOut(5000);
+            //$.alert({
+            //    title: 'Info !',
+            //    content: 'Do you want to update password?',
+            //    icon: 'fa fa-trash-o',
+            //    animation: 'scale',
+            //    closeAnimation: 'scale',
+            //    opacity: 0.5,
+            //    draggable: false,
+            //    buttons: {
+            //        okay: {
+            //            text: 'Yes',
+            //            btnClass: 'btn-danger',
+            //        }
+            //    },
+            //});
+            result = "success";
+        }
+        else {
+            $("#lblCnfPassword").html("");
+        }
+    }
 
     function ValidateUser() {
-        
+        debugger;
         var id = $("#UserId").val().trim();
         var userMasterName = $("#userMasterName").val().trim();
         var Mobile = $("#txtMobile").val().trim();
         var Email = $("#txtUserEmail").val().trim();
         var LoginName = $("#LoginUserID").val().trim();
+        var Password = $("#txtPassword").val().trim();
+
 
         var lblName = $("#lblName1").text().trim();
         var lblMobile = $("#lblMobile").text().trim();
         var lblEmail = $("#lblUserEmail").text().trim();
         var lblLoginName = $("#lblLoginUserID").text().trim();
 
-        if (userMasterName != "" && Mobile != "" && Email != "" && LoginName != "" && lblName == "" && lblMobile == "" && lblEmail =="" && lblLoginName == "") {
+
+        if (userMasterName != "" && Mobile != "" && Email != "" && LoginName != "" && lblName == "" && lblMobile == "" && lblEmail == "" && lblLoginName == "" && Password != "") {
             $("#saveUser").prop("disabled", false);
         }
         else {
             $("#saveUser").prop("disabled", true);
         }
     }
+
+    //function password() {
+    //    var lblpassword = $("#txtPassword").val();
+    //    var lblCnfPassword = $("#txtcnfPassword").val();
+    //    if (lblCnfPassword == "" && lblpassword == "") {
+    //        $("#lblPassword").html("Password is same").show().fadeOut(2000);
+    //        $.ajax({
+    //            success: function () {
+    //                $.alert({
+    //                    title: 'Alert!',
+    //                    content: 'Do you want to change password ?',
+    //                    icon: 'fa fa-rocket',
+    //                    animation: 'scale',
+    //                    closeanimation: 'scale',
+    //                    draggable: false,
+    //                    buttons: {
+    //                        okay: {
+    //                            text: 'Yes',
+    //                            btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+    //                            action: function (event, ui) {
+    //                                location.reload();
+    //                            },
+    //                        }
+    //                    }
+    //                });
+    //            }
+    //        });
+    //    }
+    //}
 
     $(function () {
         var msg = '@ViewBag.Message';
@@ -329,4 +445,33 @@
         alert("Enter the Details");
         }
     });
+
+    @*$('#saveUser').click(function () {
+        var IDInstance = $("#IDInstance").val();
+            $.ajax({
+                //url: '<%: Url.Action("Upload")%>?Cust_ID=' + Cust_ID + '&IDProject=' + IDProject+'&InstanceID='+InstanceID,
+                url: '@Url.Action("Edit", "User")',
+                type: "POST",
+                data: { 'IDInstance': IDInstance },
+                success: function (result) {
+                    $.alert({
+                        title: 'Alert !',
+                        content: 'New Live Instance updated',// <br> with some <strong>HTML</strong> <em>contents</em>',
+                        icon: 'fa fa-rocket',
+                        animation: 'scale',
+                        closeAnimation: 'scale',
+                        buttons: {
+                            okay: {
+                                text: 'Okay',
+                                btnClass: 'btn-wide mb-2 mr-2 btn btn-primary form-control',
+                                action: function (event, ui) {
+                                    $(this).remove();
+                                    location.reload();
+                                }
+                            }
+                        }
+                    });
+                }
+            });*@
+
 </script>
